# saveddit

./: .deepsource.toml  .gitignore  .travis.yml  README.md
client/: .eslintrc.js  .eslintrc.json  .prettierignore  .prettierrc.js  .prettierrc.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: App.test.tsx  App.tsx  LinkRedditForm.tsx  index.css
client/src/components/form/: Form.tsx  LoginForm.tsx  UserAuthForm.tsx
server/: main.py  pyproject.toml
server/api/: api.py  main.py
server/api/api_v1/routers/: auth.py  reddit.py  users.py
server/app/: crud.py  database.py  main.py  models.py  schemas.py
server/core/: auth.py  reddit.py  security.py
server/db/: crud.py  models.py  schemas.py  session.py
server/reddit/: db_token_manager.py  main.py
server/tests/: test_main.py
