[tool.poetry]
name = "server_saveddit"
version = "0.1.0"
description = "Saveddit helps you read and manage your saved posts on Reddit."
authors = ["kylejb <47502769+kylejb@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.4"
pydantic = "^1.7.3"
pytest = "^6.2.2"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
